Fixed black to white color transition on dot expansion for safari. Lines hidden on load, plus snappy transition on graph load. Fixed dot centering on safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,61 +6,77 @@
   color: inherit;
 }
 
-.title_circle {
-  position: fixed;
-  width: 50px;
-  height: 50px;
-  fill: black;
-  transform: translate(-25px, -50px) scale(0.12);
-  animation: title_circle_heartbeat;
-  animation-duration: 10s;
-  animation-delay: 1s;
-  animation-iteration-count: infinite;
-  animation-play-state: running;
-  z-index: 5;
-}
-
-@keyframes title_circle_heartbeat {
-  0% {
-   transform: translate(-25px, -50px) scale(0.12);
-   fill: black;
-  }
-  50% {
-   transform: translate(-25px, -50px) scale(5);
-   fill: white;
-  }
-  100% {
-   transform: translate(-å25px, -50px) scale(0.12);
-   fill: black;
-  }
-}
-
 .breathe_container {
   text-align: center;
 }
 
+.title_circle {
+  position: relative;
+  fill: black;
+  transform: scale(0);
+  animation: title_circle_load, title_circle_heartbeat;
+  animation-duration: 0.5s, 10s;
+  animation-delay: 1s, 4s;
+  animation-iteration-count: 1, infinite;
+  animation-play-state: running, running;
+  animation-fill-mode: forwards, forwards;
+  z-index: 2;
+}
+
+@keyframes title_circle_load {
+  0% {
+   transform: scale(0);
+   fill: black;
+  }
+  100% {
+   transform: scale(0.12);
+   fill: black;
+  }
+}
+
+@keyframes title_circle_heartbeat {
+  0% {
+   transform: scale(0.12);
+   filter: invert(0%);
+  }
+  50% {
+   transform: scale(2);
+   filter: invert(100%);
+  }
+  100% {
+   transform: scale(0.12);
+   filter: invert(0%);
+  }
+}
+
 .breathe_instructions_1 {
+  position: relative;
   cursor: default;
   font-family: Inter;
   opacity: 0;
   color: white;
   animation: breath_instructions_fade_in, breath_instructions_fade_out;
   animation-duration: 0.5s, 0.5s;
-  animation-delay: 0s, 5s;
+  animation-delay: 0s, 8s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  z-index: 1;
+  transform: translateY(-50px);
 }
 
 .breathe_instructions_2 {
+  position: relative;
   cursor: default;
-  font-family: Comic Sans MS;
+  font-family: Inter;
   opacity: 0;
   color: white;
   animation: breath_instructions_fade_in, breath_instructions_fade_out;
   animation-duration: 0.5s, 0.5s;
-  animation-delay: 16s, 26s;
+  animation-delay: 19s, 29s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  z-index: 1;
+  transform: translateY(-50px);
 }
 
 @keyframes breath_instructions_fade_in {
@@ -207,11 +223,12 @@
 
 .character_tree {
   opacity: 1;
-  animation: graph_shift 5s ease-in-out;
+  animation: graph_shift;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
   animation-delay: 10s;
   animation-fill-mode: forwards;
 }
-
 @keyframes graph_shift {
   0% {
     transform: translate(0, 0)
