--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,7 +60,7 @@ text {
   }
   body {
     color: white;
-    background: #14171a;
+    background: #363d45;
   }
 }
 
